# ojogo

./: LICENSE  README.md  haskell-game.cabal  stack.yaml
src/: Main.hs
