cabal-version:       2.4
name:                haskell-game
version:             0.0.1.0
license:             Zlib
license-file:        LICENSE
author:              ShingekiNoChikungunya
maintainer:          snk@chaotic.cx

executable game
  main-is:             Main.hs
  build-depends:       base ^>=4.14.0.0
                       , aeson ^>=1.5.5.0
                       , bytestring ^>= 0.10.8.2
                       , data-default-class ^>=0.1.2.0
                       , req ^>=3.8.0
                       , text ^>=1.2.3.1
                       , time ^>= 1.9.0
  hs-source-dirs:      src
  default-language:    Haskell2010

